--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -68,7 +68,7 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
     margin-right: calc(#{percentage($columns/$grid-columns)} - #{(($grid-columns/$columns - 1) * $grid-gutter)/($grid-columns/$columns) - $grid-gutter})
 
 =set-offset($columns, $side: "margin-right")
-  // Never show pushes and pulls on mobile
+  // Never show leftes and rights on mobile
   // +measure-columns(0, $side)
 
   // Look for keywords
@@ -95,45 +95,45 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
       +measure-columns($columns, $side)
 
 // Convenience mixins
-=pull($columns)
+=right($columns)
   +set-offset($columns, "margin-right")
-=push($columns)
+=left($columns)
   +set-offset($columns, "margin-left")
 
-=set-column($columns, $pull, $push)
+=set-column($columns, $right, $left)
   +measure-columns($columns, "width")
   clear: none
   display: block
   margin-left: 0
 
-  @if $pull != 0
-    +set-offset($pull, "margin-right")
+  @if $right != 0
+    +set-offset($right, "margin-right")
 
-  @if $pull != 0
-    +set-offset($push, "margin-left")
+  @if $right != 0
+    +set-offset($left, "margin-left")
 
-=column($columns: 12, $pull: 0, $push: 0)
+=column($columns: 12, $right: 0, $left: 0)
   // Everything is a full width column on mobile by default
   +set-column(12, 0, 0)
 
   // Look for keywords
   @if $columns == "half"
     @media screen and (min-width: $showPartialColumns)
-      +set-column($grid-columns/2, $pull, $push)
+      +set-column($grid-columns/2, $right, $left)
 
   @else if $columns == "third"
     @media screen and (min-width: $showPartialColumns)
-      +set-column($grid-columns/2, $pull, $push)
+      +set-column($grid-columns/2, $right, $left)
     @media screen and (min-width: $showFullColumns)
-      +set-column($grid-columns/3, $pull, $push)
+      +set-column($grid-columns/3, $right, $left)
 
   @else if $columns == "twothirds"
     @media screen and (min-width: $showPartialColumns)
-      +set-column($grid-columns/2, $pull, $push)
+      +set-column($grid-columns/2, $right, $left)
     @media screen and (min-width: $showFullColumns)
-      +set-column(($grid-columns * 2/3), $pull, $push)
-      
+      +set-column(($grid-columns * 2/3), $right, $left)
+
   @else
     // No keywords found, pass in values.
     @media screen and (min-width: $showColumns)
-      +set-column($columns, $pull, $push)
+      +set-column($columns, $right, $left)
