Removing instances of

--- a/lib/jade/docs/3.x/ui/labels/index.jade
+++ b/lib/jade/docs/3.x/ui/labels/index.jade
@@ -63,7 +63,7 @@ block variations
             @include label(map-get($colors, red));
           }
           .notice {
-            @include label($primary);
+            @include label($primary-color);
           }
 
   .ifnot-semantic
