--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -25,7 +25,7 @@
   +column(12)
 
   @media screen and (min-width: $tablet-landscape)
-    +column(8, 2)
+    +column(8, 2, 2)
 
 .main-navigation
   +navbar($bleed-container: true)
