--- a/lib/sass/core/_direct-apply.sass
+++ b/lib/sass/core/_direct-apply.sass
@@ -18,6 +18,17 @@ input[type="file"]::-webkit-file-upload-button
 
 +dropdown_menu
 
+// Growls
+// ------
+
+.growl_container
+  position: fixed
+  top: $space
+  right: $space
+  z-index: 1000
+  width: 250px
+  overflow: auto
+
 // Tooltips
 // --------
 
