Growls work a helluva lot better now

--- a/lib/sass/core/_mixins.sass
+++ b/lib/sass/core/_mixins.sass
@@ -20,3 +20,11 @@
   input[type="url"],
   input[type="week"]
     @content
+
+=fadeInDown
+  animation-duration: 0.25s
+  animation-delay: 0.2s
+  animation-timing-function: ease
+  animation-fill-mode: both
+  animation-name: fadeInDown
+
