--- a/lib/sass/components/_notifications.sass
+++ b/lib/sass/components/_notifications.sass
@@ -14,12 +14,8 @@
     margin: 5px auto
     max-width: 300px
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
-    animation-duration: 0.25s
-    animation-delay: 0.2s
-    animation-timing-function: ease
-    animation-fill-mode: both
+    +fadeInDown
     z-index: 1000
-    animation-name: fadeInDown
 
     &[data-type="success"]
       background-color: map-get($colors, green)
