--- a/rails/app/assets/stylesheets/kickstart_rails/core/_direct-apply.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_direct-apply.sass
@@ -2,7 +2,7 @@
 // ===================
 // Regardless of semantic or non-semantic usage, some styles
 // Should be applied directly to classes or elements no matter
-// what. This include should be included near the end of the 
+// what. This include should be included near the end of the
 // import chain but before kickstart.sass to accomplish this.
 
 // Buttons
@@ -17,6 +17,21 @@ input[type="file"]::-webkit-file-upload-button
   +button
 
 +dropdown_menu
+
+// Growls
+// ------
+
+.growl_container
+  position: fixed
+  top: $space
+  right: $space
+  padding: 0px $space/2
+  z-index: 1000
+  width: 300px
+  overflow: auto
+
+  .growl
+    box-shadow: 0px 0px $space/2 rgba(0, 0, 0, 0.5)
 
 // Tooltips
 // --------
@@ -69,7 +84,7 @@ input[type="file"]::-webkit-file-upload-button
     &:after, &:before
       opacity: 1
 
-    &:after 
+    &:after
       transform: translateY(-8px)
       transition: transform 0.25s
 
