--- a/lib/sass/core/_direct-apply.sass
+++ b/lib/sass/core/_direct-apply.sass
@@ -33,6 +33,13 @@ input[type="file"]::-webkit-file-upload-button
 
   .growl
     box-shadow: 0px 0px $space/2 rgba(0, 0, 0, 0.5)
+    transition: all 0.5s
+
+    &.show, &.hide
+      +fadeInDown
+
+    &.hide
+      animation-direction: reverse
 
 // Tooltips
 // --------
