Adding automatic alignment for navigation

--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -47,6 +47,12 @@
       align-items: center
       flex-wrap: wrap
 
+      &:last-child
+        > li.with-submenu.open
+          ul
+            left: auto
+            right: -1px
+
       > li
         list-style: none
         +root-element
