--- a/lib/sass/components/_alerts.sass
+++ b/lib/sass/components/_alerts.sass
@@ -9,7 +9,8 @@
   > *:last-child
     margin-bottom: 0
 
-  +alternate-headings
+  h1
+    +heading-xs
 
   a:not([role=button])
     color: inherit
