--- a/lib/sass/components/_images.sass
+++ b/lib/sass/components/_images.sass
@@ -12,7 +12,8 @@
     + img, + figure
       margin-left: $space/2
 
-    +alternate-headings
+  h1
+    +heading-xs
 
   > img, > figure
     + :not(img)
