--- a/lib/sass/core/_direct-apply.sass
+++ b/lib/sass/core/_direct-apply.sass
@@ -41,6 +41,8 @@ input[type="file"]::-webkit-file-upload-button
     &.hide
       animation-direction: reverse
 
+    +growl
+
 // Tooltips
 // --------
 
