--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -148,7 +148,7 @@ a
     bottom: 0.7rem
   +heading-break
 
-=xheading-xs-default
+=heading-xxs-default
   font-size: 0.9rem
   margin:
     bottom: 0.5rem
