--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -19,7 +19,7 @@
     +heading-xs
 
   h2
-    +xheading-xs
+    +heading-xxs
 
 .fullpane
   +column(12)
@@ -105,7 +105,7 @@ h1.example-
   &xs
     +heading-xs
   &xxs
-    +xheading-xs
+    +heading-xs
 
 .if-jquery, .ifnot-jquery, .if-semantic, .ifnot-semantic
   display: none
