--- a/rails/app/assets/stylesheets/kickstart_rails/core/_mixins.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_mixins.sass
@@ -1,10 +1,3 @@
-=alternate-headings
-  h1
-    +heading-xs
-
-  h2, h3, h4, h5
-    +xheading-xs
-
 =text-inputs
   input[type="date"],
   input[type="datetime"],
@@ -20,3 +13,11 @@
   input[type="url"],
   input[type="week"]
     @content
+
+=fadeInDown
+  animation-duration: 0.25s
+  animation-delay: 0.2s
+  animation-timing-function: ease
+  animation-fill-mode: both
+  animation-name: fadeInDown
+
