--- a/lib/jade/docs/3.x/ui/labels/index.jade
+++ b/lib/jade/docs/3.x/ui/labels/index.jade
@@ -70,5 +70,7 @@ block variations
     :markdown
       <span>
 
-          <span class="label red">Please correct</span>
-          <span class="label blue">New!</span> 
+          <span class="label label-red">Please correct</span>
+          <span class="label label-blue">New!</span> 
+
+  +available-colors('label')
