--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -6,6 +6,7 @@
   text-align: left
   transition: box-shadow 0.15s
   vertical-align: middle
+  user-select: none
 
   &.with-submenu
     position: relative
