--- a/rails/app/assets/stylesheets/kickstart_rails/components/_dropdown_menu.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_dropdown_menu.sass
@@ -28,7 +28,7 @@
         border: 0px
 
         a:not([role=button])
-          +button
+          +button-default
           display: block
           margin-bottom: 0
           border-radius: 0
