Guestimating some responsive design for the navbar'

--- a/lib/jade/_mixins.jade
+++ b/lib/jade/_mixins.jade
@@ -12,3 +12,13 @@ mixin available-colors($prefix)
 
     You may also use your theme's primary and secondary colors via `#{$prefix}-primary` and `#{$prefix}-secondary` 
 
+mixin screen-sizes
+  :markdown
+    Available screen size variables:
+
+    - `$phone`
+    - `$phablet`
+    - `$tablet`
+    - `$desktop`
+    - `$large-monitor`
+    - `$xl-monitor`
