--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -4,19 +4,19 @@
   @else
     color: rgba(0, 0, 0, 0.5)
 
-=navbar-default($bleed-container: false, $background: map-get($white, dark))
+=navbar-default($bleed-container: false, $background: map-get($white, dark), $breakpoint: $tablet)
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: 0.9rem
 
   nav
+    width: 100%
+    border-radius: 0
     display: flex
     align-items: flex-start
     flex-wrap: wrap
     justify-content: space-between
-    align-content: space-between
-    width: 100%
-    border-radius: 0
+    align-content: space-between 
 
     @if (lightness($background) < 75%)
       color: white
@@ -41,17 +41,19 @@
     > ul
       margin: 0
       padding: 0
-      display: flex
-      justify-content: space-between
-      align-content: space-between
-      align-items: center
-      flex-wrap: wrap
 
-      &:last-child
-        > li.with-submenu.open
-          ul
-            left: auto
-            right: -1px
+      @media screen and (min-width: $breakpoint)
+        display: flex
+        justify-content: space-between
+        align-content: space-between
+        align-items: center
+        flex-wrap: wrap
+
+        &:last-child
+          > li.with-submenu.open
+            ul
+              left: auto
+              right: -1px
 
       > li
         list-style: none
@@ -65,8 +67,14 @@
           right: map-get($rootElement, paddingH)
         position: relative
 
-        .navbar-button
-          +button(transparent)
+        &.navbar-button
+          button
+            +button(transparent)
+            border-color: transparent
+            color: inherit
+
+          @media screen and (min-width: $breakpoint)
+            display: none
 
         &.with-submenu // Added via k$.nav()
           padding: (2 * map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
