Good start on mobile nav

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -2,8 +2,9 @@
   .container
     nav
       ul
-        li
+        li.navbar-title
           img.logo(src="/img/kickstart-black.png")
+          button(role="button") =
         li
           a(href="/") Home
         li
