--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -2,6 +2,9 @@
   .container
     nav
       ul
+        li.navbar-title
+          h1 Documentation
+          button(role="button") =
         li: a(href="/docs/#{docsVersion}") Quickstart
         li: a(href="/docs/#{docsVersion}/theming/") Theming
         li: a(href="/docs/#{docsVersion}/grid/") Grid
