--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -257,7 +257,7 @@ block variations
 
       Simply pass in `true` to the `$bleed-container` parameter to enable container bleed.
 
-  :markdown 
+  :markdown
     ### Dropdowns
 
     To create a dropdown, simply nest another `ul` in one of your `li`s.
@@ -366,7 +366,7 @@ block variations
           }
 
   :markdown
-    The last `li` is unstyled to signal the product detail page for "Rake" is the current 
+    The last `li` is unstyled to signal the product detail page for "Rake" is the current
     page they are on.
 
     ### Dark
@@ -402,15 +402,15 @@ block variations
             @include breadcrumbs($background-color: #333);
           }
 
-      As with the navbar, passing in the background color as a parameter 
+      As with the navbar, passing in the background color as a parameter
       insures other color conventions match or oppose as best as the mixin
       can decide.
 
-  :markdown 
+  :markdown
     ### Pagination
 
     Pagination styling is very similar to the navigation bar. As such, the
-    markup is also very similar and 
+    markup is also very similar and
     <span class="ifnot-semantic">a <code>.pagination-dark</code> class is available.</span>
     <span class="if-semantic">a <code>$background-color</code> can be passed in to <code>pagination()</code></span>.
 
@@ -477,19 +477,60 @@ block variations
 
   h2 Responsive
   :markdown
-    To use a collapse button on the navbar instead of flowing the menu items, you'll need to define a few settings.
+    ### Collapse items
+
+    To use a collapse button on the navbar instead of flowing the menu items,
+    you'll need to define a few settings.
+
+    First, tell the navbar that its items should collapse.
 
         .navbar {
-          @include navbar($breakpoint: $tablet);
+          @include navbar($collapse: true);
+        }
+
+    At this point, all `li`s except for `.navbar-title` will disappear. Be sure to
+    add this, even if you only put the responsive button inside.
+
+        <div class="mynavbar">
+          <nav>
+            <ul>
+              <!-- This will be the title and
+                   the responsive collapse button -->
+              <li class="navbar-title">
+                <h1>Acme Corp</h1>
+                <button role="button">=</button>
+              </li>
+
+              <!-- These are the collapsed navigation
+                   items. -->
+
+              <li>
+                <a href="/products/">Products</a>
+              </li>
+              <li>
+                <a href="/blog/">Blog</a>
+              </li>
+            </ul>
+          </nav>
+        <div>
+
+    The `=` in the responsive button should automatically be changed to a three-bar icon.    
+
+    ### Define a breakpoint (optional)
+
+    By default, the navbar will collapse menu items at screen sizes narrower than a tablet
+    (according to the width defined as `$tablet`). To customize this, you can change the `$breakpoint`.
+        .navbar {
+          @include navbar($breakpoint: $tablet, $collapse: true);
         }
 
     The `$breakpoint` is simply the screen width at which responsive styling
     should cease to be applied. In the above example, we use one of the provided
     screen size variables. However, you may also pass in a css measurement value.
 
-        @include navbar($breakpoint: 768px);
-        @include navbar($breakpoint: 200em);
-        @include navbar($breakpoint: 500pt);
+        @include navbar($breakpoint: 768px, $collapse: true);
+        @include navbar($breakpoint: 200em, $collapse: true);
+        @include navbar($breakpoint: 500pt, $collapse: true);
 
   +screen-sizes
 
