--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -191,8 +191,8 @@ hr
 // Navigation
 // ----------
 
-=navbar($bleed-container: false, $background: map-get($white, dark))
-  +navbar-default($bleed-container, $background)
+=navbar($bleed-container: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+  +navbar-default($bleed-container, $background, $breakpoint, $collapse)
 
 =dropdown_menu
   +dropdown_menu-default
