--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -1,4 +1,4 @@
-=button-default($color: $secondary-color, $size: 1)
+=button-default($background-color: $secondary-color, $size: 1)
   display: inline-block
   cursor: pointer
   text-decoration: none
@@ -32,27 +32,27 @@
   // TODO: Done this way, these properties are not mutex
   //       in the case of missing params.
 
-  +button-color($color)
+  +button-color($background-color)
   +root-element($size: $size)
   +button-size($size)
 
 // Separated from main mixin for access by non-semantic library.
 
-=button-color($color)
-  background-color: $color
+=button-color($background-color)
+  background-color: $background-color
 
   &.open
-    background-color: darken($color, 5%)
+    background-color: darken($background-color, 5%)
 
-  @if lightness($color) > 75%
+  @if lightness($background-color) > 75%
     color: map-get($black, lighter)
   @else
     color: white
 
-  @if $color == map-get($colors, yellow)
+  @if $background-color == map-get($colors, yellow)
     color: map-get($black, lighter)
 
-  @if $color == transparent
+  @if $background-color == transparent
     color: map-get($black, lighter)
 
 =button-size($size)
@@ -101,7 +101,7 @@
   right: -$space
   border: 1px solid map-get($white, darker)
 
-=button-group-default($color, $size)
+=button-group-default($background-color, $size)
   list-style: none
   padding: 0
   margin:
@@ -117,7 +117,7 @@
 
     > a, > button, > input
       color: inherit
-      +button($color, $size)
+      +button($background-color, $size)
       text-decoration: inherit
       vertical-align: top
 
