--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -4,24 +4,32 @@
   @else
     color: rgba(0, 0, 0, 0.5)
 
-=navbar-default($bleed-container: false, $background: map-get($white, dark))
+=navbar-default($bleed-container: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: 0.9rem
 
+  @if $collapse
+    > ul
+      > li
+        display: none
+
   nav
-    display: flex
-    align-items: flex-start
-    flex-wrap: wrap
-    justify-content: space-between
-    align-content: space-between
     width: 100%
     border-radius: 0
+    position: relative
 
     @if (lightness($background) < 75%)
       color: white
     @else
       color: $default-font-color
+
+    @media screen and (min-width: $breakpoint)
+      display: flex
+      align-items: flex-start
+      flex-wrap: wrap
+      justify-content: space-between
+      align-content: space-between
 
     h1
       margin-bottom: 0
@@ -31,27 +39,31 @@
     p
       margin: 0
 
-    @if ($bleed-container)
-      > ul:first-child
-        margin-left: (-1 * map-get($rootElement, paddingH))
+    @media screen and (min-width: $breakpoint)
+      @if ($bleed-container)
+        > ul:first-child
+          margin-left: (-1 * map-get($rootElement, paddingH))
 
-      > ul:last-child
-        margin-right: (-1 * map-get($rootElement, paddingH))
+        > ul:last-child
+          margin-right: (-1 * map-get($rootElement, paddingH))
 
     > ul
       margin: 0
       padding: 0
-      display: flex
-      justify-content: space-between
-      align-content: space-between
-      align-items: center
-      flex-wrap: wrap
+
+      @media screen and (min-width: $breakpoint)
+        display: flex
+        justify-content: space-between
+        align-content: space-between
+        align-items: center
+        flex-wrap: wrap
 
       &:last-child
-        > li.with-submenu.open
-          ul
-            left: auto
-            right: -1px
+        @media screen and (min-width: $breakpoint)
+          > li.with-submenu.open
+            ul
+              left: auto
+              right: -1px
 
       > li
         list-style: none
@@ -64,6 +76,21 @@
           left: map-get($rootElement, paddingH)
           right: map-get($rootElement, paddingH)
         position: relative
+
+
+        &.navbar-title
+          display: flex
+          justify-content: space-between
+          align-items: center
+
+          button
+            +button(transparent)
+            border-color: transparent
+            color: inherit
+            display: block
+
+            @media screen and (min-width: $breakpoint)
+              display: none
 
         &.with-submenu // Added via k$.nav()
           padding: (2 * map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
@@ -133,4 +160,3 @@
           &:active
             background: darken($background, 15%)
             border-color: darken($background, 15%)
-
