--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -38,7 +38,7 @@
     opacity: 0.8
 
 .docs-nav
-  +navbar($bleed-container: true, $background: map-get($black, lightest))
+  +navbar($bleed-container: true, $background: map-get($black, lightest), $collapse: true)
 
 // Colors
 // Kind of shitty, but there is a colors page that directly relies on this.
