Adding test for expando magic

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -11,6 +11,8 @@ html(lang='en')
     .navbar#test-nav
       nav
         ul
+          li.navbar-title
+            button(role="button") =
           li
             a(href="#") Just an average link
           li#test-nav-subparent
