Navbar on site now responsive

--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -37,4 +37,7 @@ html(lang='en')
         script(src="/js/kickstart.js")
         script(src="/js/docs.js")
 
+        script.
+          k$.nav('.main-navigation')
+
       block postJS
