--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -28,7 +28,7 @@
     +column(8, 2, 2)
 
 .main-navigation
-  +navbar($bleed-container: true)
+  +navbar($bleed-container: true, $collapse: true)
 
   .logo
     height: 30px
