--- a/lib/sass/components/_dropdown_menu.sass
+++ b/lib/sass/components/_dropdown_menu.sass
@@ -34,6 +34,7 @@
           border-radius: 0
           background: white
           border-color: white
+          font-size: $default-font-size
 
           &:hover
             border-color: map-get($white, dark)
