--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -7,7 +7,7 @@
 =navbar-default($bleed-container: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
-  font-size: 0.9rem
+  font-size: $default-font-size
 
   nav
     width: 100%
