Responsive navbar tweaks

--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -94,6 +94,8 @@
             border-color: transparent
             color: inherit
             display: block
+            margin-bottom: 0
+            font-family: Kickstart, 'Kickstart'
 
             @media screen and (min-width: $breakpoint)
               display: none
